# dtwarp

./: .dtwarp-progress.json  .gitignore  DESIGN_NOTES.md  LICENSE  NOTICE  README.md  anchors.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
scripts/: check_honest_marketing.py  run_tier1.py  verify_step.py
src/dtwarp/: __init__.py
src/dtwarp/core/: __init__.py  cost.py  padmask.py  softdtw.py
src/dtwarp/eval/: __init__.py  bootstrap.py  harness.py  report.py
src/dtwarp/eval/results/: tier1_pusht_keypoints.json
src/dtwarp/kernels/: __init__.py  cuda_fastpath.py
src/dtwarp/loss/: __init__.py  config.py  heads.py  wrap.py
tests/: test_cost.py  test_eval.py  test_heads.py  test_kernels.py  test_padmask.py  test_softdtw.py  test_throughput.py
