[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtwarp"
version = "0.1.0a1"
description = "Soft-DTW divergence loss head for LeRobot imitation learning (temporally-elastic, phase-invariant, pad-aware, drop-in)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
keywords = ["soft-dtw", "dynamic-time-warping", "imitation-learning", "lerobot", "behavior-cloning", "loss-function", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/hinanohart/dtwarp"
Repository = "https://github.com/hinanohart/dtwarp"

[project.optional-dependencies]
# Optional CUDA fast-path. The kernel is lazy-imported only when present; never vendored.
cuda = ["pytorch-softdtw-cuda"]
# Optional LeRobot integration (drop-in wrap_policy / heads).
lerobot = ["lerobot>=0.4.0"]
# Empirical harness (Tier-1/Tier-2). gym-pusht is only needed for closed-loop Tier-2.
eval = ["lerobot>=0.4.0", "datasets>=2.19", "gym-pusht; python_version>='3.11'"]
# Development / CI.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "tslearn>=0.6.3",   # forward-value cross-check oracle only (not a runtime dep)
    "scipy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dtwarp"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E741"]  # ambiguous var names (i,j common in DP recursions)

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/dtwarp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
